--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     
     <div class="agent-section">
-      <img src="img/blank.jpg" alt="Agent Photo" class="agent-photo">
+      <img src="img/rise.jpeg" alt="Agent Photo" class="agent-photo">
       <h3 class="agent-name">ADMIN</h3>
       
       <p class="agent-registration"><span class="registration-symbol">®</span> Rise Properties RERA ORN NO. 29323</p>
