--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     
     <div class="agent-section">
       <img src="img/rise.jpeg" alt="Agent Photo" class="agent-photo">
-      <h3 class="agent-name">ADMIN</h3>
+      <h3 class="agent-name">Zarmeen Khan</h3>
+      <h3 class="agent-name">Admin</h3>
       
       <p class="agent-registration"><span class="registration-symbol">®</span> Rise Properties RERA ORN NO. 29323</p>
     </div>
