--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     
     <div class="agent-section">
-      <img src="img/rise.jpeg" alt="Agent Photo" class="agent-photo">
+      <img src="img/rise 1.jpeg" alt="Agent Photo" class="agent-photo">
       <h3 class="agent-name">Zarmeen Khan</h3>
       <h3 class="agent-name">Admin</h3>
       
