--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="agent-section">
       <img src="img/rise 1.jpeg" alt="Agent Photo" class="agent-photo">
       <h3 class="agent-name">Zarmeen Khan</h3>
-      <h3 class="agent-name">Admin</h3>
+      <h3 class="agent-name">Administrator</h3>
       
       <p class="agent-registration"><span class="registration-symbol">®</span> Rise Properties RERA ORN NO. 29323</p>
     </div>
